crates/lang-parse/tests/snapshots/parser__parser_array range units.snap
---
source: crates/lang-parse/tests/parser.rs
expression: parse(input)
---
Ok(
    Ast {
        span: 0..13,
        statements: StatementList {
            span: 0..13,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..12,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            attr: [],
                            id: Identifier {
                                span: 0..1,
                                name: "a",
                            },
                            ty: None,
                            expr: ArrayRange(
                                ArrayRangeExpression {
                                    span: 4..12,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    start: ArrayItem {
                                        span: 5..6,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expr: Literal(
                                            Literal {
                                                span: 5..6,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 5..6,
                                                        value: 1,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    end: ArrayItem {
                                        span: 8..9,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        expr: Literal(
                                            Literal {
                                                span: 8..9,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 8..9,
                                                        value: 3,
                                                        raw: "3",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    unit: Some(
                                        Unit {
                                            span: 10..12,
                                            name: "mm",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
