crates/lang-parse/tests/snapshots/parser__parser_assignment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: "0x3d37d0379f64f449",
        output_hash: "0x58f68fa480d31bc3",
        tree: (
            span: (
                start: 0,
                end: 10,
            ),
            statements: (
                span: (
                    start: 0,
                    end: 10,
                ),
                extras: (
                    leading: ([]),
                    trailing: ([]),
                ),
                statements: [
                    (LocalAssignment((
                        span: (
                            start: 0,
                            end: 9,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        id: (
                            span: (
                                start: 0,
                                end: 1,
                            ),
                            name: "a",
                        ),
                        ty: None,
                        expr: BinaryOperation((
                            span: (
                                start: 4,
                                end: 9,
                            ),
                            lhs: QualifiedName((
                                span: (
                                    start: 4,
                                    end: 5,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([
                                        Whitespace((" ")),
                                    ]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 4,
                                            end: 5,
                                        ),
                                        name: "b",
                                    ),
                                ],
                            )),
                            op: (
                                span: (
                                    start: 6,
                                    end: 7,
                                ),
                                value: Multiply,
                            ),
                            rhs: Literal((
                                span: (
                                    start: 8,
                                    end: 9,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 8,
                                        end: 9,
                                    ),
                                    value: 2,
                                    raw: "2",
                                )),
                            )),
                        )),
                    )), ([])),
                ],
                tail: None,
            ),
        ),
    ),
)
---
