crates/lang-parse/tests/snapshots/parser__parser_attribute access.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 13502753625269157244,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 7,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 7,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [],
                    tail: Some((
                        span: (
                            start: 0,
                            end: 7,
                        ),
                        extras: (
                            leading: ([]),
                            trailing: ([]),
                        ),
                        attr: ([]),
                        expr: ElementAccess((
                            span: (
                                start: 0,
                                end: 7,
                            ),
                            expr: QualifiedName((
                                span: (
                                    start: 0,
                                    end: 3,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                parts: [
                                    (
                                        span: (
                                            start: 0,
                                            end: 3,
                                        ),
                                        name: "foo",
                                    ),
                                ],
                            )),
                            element_chain: [
                                (
                                    span: (
                                        start: 3,
                                        end: 7,
                                    ),
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    inner: Attribute((
                                        span: (
                                            start: 4,
                                            end: 7,
                                        ),
                                        name: "bar",
                                    )),
                                ),
                            ],
                        )),
                    )),
                ),
            ),
            hash: 7067504611392207717,
        ),
    ),
)
---
