crates/lang-parse/tests/snapshots/parser__parser_attribute assignment.snap
---
source: crates/lang-parse/tests/parser.rs
expression: output
---
(
    header: (
        magic: (38, 109, 117, 59),
        version: ("0.6.0"),
        kind: Ast,
    ),
    payload: (
        input_hash: 15803720857379957688,
        tree: (
            inner: (
                span: (
                    start: 0,
                    end: 31,
                ),
                statements: (
                    span: (
                        start: 0,
                        end: 31,
                    ),
                    extras: (
                        leading: ([]),
                        trailing: ([]),
                    ),
                    statements: [
                        (LocalAssignment((
                            span: (
                                start: 0,
                                end: 30,
                            ),
                            extras: (
                                leading: ([]),
                                trailing: ([]),
                            ),
                            attr: ([
                                (
                                    span: (
                                        start: 0,
                                        end: 25,
                                    ),
                                    is_inner: false,
                                    extras: (
                                        leading: ([]),
                                        trailing: ([]),
                                    ),
                                    commands: [
                                        Assignment((
                                            span: (
                                                start: 2,
                                                end: 19,
                                            ),
                                            extras: (
                                                leading: ([]),
                                                trailing: ([]),
                                            ),
                                            attr: ([]),
                                            id: (
                                                span: (
                                                    start: 2,
                                                    end: 7,
                                                ),
                                                name: "color",
                                            ),
                                            ty: None,
                                            expr: Literal((
                                                span: (
                                                    start: 10,
                                                    end: 19,
                                                ),
                                                extras: (
                                                    leading: ([]),
                                                    trailing: ([]),
                                                ),
                                                literal: String((
                                                    span: (
                                                        start: 10,
                                                        end: 19,
                                                    ),
                                                    content: "#FF00FF",
                                                )),
                                            )),
                                        )),
                                    ],
                                ),
                            ]),
                            id: (
                                span: (
                                    start: 25,
                                    end: 26,
                                ),
                                name: "a",
                            ),
                            ty: None,
                            expr: Literal((
                                span: (
                                    start: 29,
                                    end: 30,
                                ),
                                extras: (
                                    leading: ([]),
                                    trailing: ([]),
                                ),
                                literal: Integer((
                                    span: (
                                        start: 29,
                                        end: 30,
                                    ),
                                    value: 1,
                                    raw: "1",
                                )),
                            )),
                        )), ([])),
                    ],
                    tail: None,
                ),
            ),
            hash: 11741031245702427866,
        ),
    ),
)
---
